--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="hongjiefly.kotlinmvvm.activity.MainActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+    <LinearLayout
+        android:id="@+id/activity_main_layout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dim50"
+        android:layout_alignParentBottom="true"
+        android:background="@color/color_ffffff"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/color_f0f0f0"/>
 
-</android.support.constraint.ConstraintLayout>
+        <RadioGroup
+            android:id="@+id/tab_rg_menu"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_ffffff"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/tab_rb_1"
+                style="@style/tab_rb_style"
+                android:checked="true"
+                android:drawableTop="@drawable/tab_selector_1"
+                android:text="@string/app_tab_text_1"/>
+
+            <RadioButton
+                android:id="@+id/tab_rb_2"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_2"
+                android:text="@string/app_tab_text_2"/>
+
+            <RadioButton
+                android:id="@+id/tab_rb_3"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_3"
+                android:text="@string/app_tab_text_3"/>
+
+            <RadioButton
+                android:id="@+id/tab_rb_4"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_4"
+                android:text="@string/app_tab_text_4"/>
+        </RadioGroup>
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/activity_main_vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/activity_main_layout"/>
+</RelativeLayout>
+
